Group Project Simple Shell

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals that contributed in the contents of this repository
 
 Nwanze Justin <tochukwunwanze5@gmail.com>
+Joshua Kanmodi <kanmodijoshua@gmail.com>
